refactor loader so they can be run without test conflicts